--- a/SO_Numerical_Experiments/aquistion_funs_experiments.ipynb
+++ b/SO_Numerical_Experiments/aquistion_funs_experiments.ipynb
@@ -2,73 +2,107 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30) Best value: -4.31e+00\n",
-      "35) Best value: -3.28e+00\n",
-      "40) Best value: -3.28e+00\n",
-      "45) Best value: -3.28e+00\n",
-      "50) Best value: -2.54e+00\n",
-      "55) Best value: -2.54e+00\n",
-      "60) Best value: -2.44e+00\n",
-      "65) Best value: -2.44e+00\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Exception ignored in: <bound method IPythonKernel._clean_thread_parent_frames of <ipykernel.ipkernel.IPythonKernel object at 0x109df9a00>>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/ipykernel/ipkernel.py\", line 770, in _clean_thread_parent_frames\n",
-      "    def _clean_thread_parent_frames(\n",
-      "\n",
-      "KeyboardInterrupt: \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "70) Best value: -2.44e+00\n",
-      "75) Best value: -2.44e+00\n",
-      "80) Best value: -2.44e+00\n",
-      "85) Best value: -2.44e+00\n",
-      "90) Best value: -2.44e+00\n",
-      "95) Best value: -2.44e+00\n",
-      "100) Best value: -2.41e+00\n",
-      "30) Best value: -7.83e+00\n",
-      "35) Best value: -4.53e+00\n",
-      "40) Best value: -1.37e+00\n",
-      "45) Best value: -1.37e+00\n",
-      "50) Best value: -1.37e+00\n",
-      "55) Best value: -1.37e+00\n",
-      "60) Best value: -1.37e+00\n",
-      "65) Best value: -8.06e-02\n",
-      "70) Best value: -8.06e-02\n",
-      "75) Best value: -8.06e-02\n",
-      "80) Best value: -8.06e-02\n",
-      "85) Best value: -8.06e-02\n",
-      "90) Best value: -8.06e-02\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "95) Best value: -8.06e-02\n",
-      "100) Best value: -8.06e-02\n",
-      "30) Best value: -8.63e+00\n",
-      "35) Best value: -7.43e+00\n",
-      "40) Best value: -7.43e+00\n",
-      "45) Best value: -7.43e+00\n",
-      "50) Best value: -1.98e+00\n",
-      "55) Best value: -1.98e+00\n"
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -84,52 +118,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Comparison Best Superior\n",
-      "0  UCB vs EI   EI       No\n",
-      "1  UCB vs PI  UCB       No\n",
-      "2   EI vs PI   EI      Yes\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'compare_acquisition_functions' from 'confidence_intervals' (/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/confidence_intervals.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/aquistion_funs_experiments.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/aquistion_funs_experiments.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mconfidence_intervals\u001b[39;00m \u001b[39mimport\u001b[39;00m compare_acquisition_functions\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/aquistion_funs_experiments.ipynb#W3sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m compare_acquisition_functions(ucb_2, ucb_ci_2, ei_2, ei_ci_2, pi_2, pi_ci_2)\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'compare_acquisition_functions' from 'confidence_intervals' (/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/confidence_intervals.py)"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "# Extract final values and confidence intervals\n",
-    "final_ucb = ucb_2[-1]\n",
-    "final_ucb_ci = ucb_ci_2[-1]\n",
-    "final_ei = ei_2[-1]\n",
-    "final_ei_ci = ei_ci_2[-1]\n",
-    "final_pi = pi_2[-1]\n",
-    "final_pi_ci = pi_ci_2[-1]\n",
+    "from confidence_intervals import compare_acquisition_functions\n",
     "\n",
-    "# Determine superiority\n",
-    "results = []\n",
-    "for (acq1, final1, ci1), (acq2, final2, ci2) in [\n",
-    "    (('UCB', final_ucb, final_ucb_ci), ('EI', final_ei, final_ei_ci)),\n",
-    "    (('UCB', final_ucb, final_ucb_ci), ('PI', final_pi, final_pi_ci)),\n",
-    "    (('EI', final_ei, final_ei_ci), ('PI', final_pi, final_pi_ci)),\n",
-    "]:\n",
-    "    best_acq = acq1 if final1 > final2 else acq2\n",
-    "    superior = 'Yes' if final1 - ci1 > final2 + ci2 else 'No'\n",
-    "    results.append({\n",
-    "        'Comparison': f'{acq1} vs {acq2}',\n",
-    "        'Best': best_acq,\n",
-    "        'Superior': superior\n",
-    "    })\n",
-    "\n",
-    "# Create DataFrame for the results\n",
-    "results_df = pd.DataFrame(results)\n",
-    "\n",
-    "print(results_df)\n",
-    "\n",
-    "# Save the DataFrame to a CSV file\n",
-    "results_df.to_csv('acquisition_function_comparisons.csv', index=False)"
+    "compare_acquisition_functions(ucb_2, ucb_ci_2, ei_2, ei_ci_2, pi_2, pi_ci_2)"
    ]
   },
   {
