--- a/SO_Numerical_Experiments/aquistion_funs_experiments.ipynb
+++ b/SO_Numerical_Experiments/aquistion_funs_experiments.ipynb
@@ -2,21 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
-      "  warnings.warn(\n",
-      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
-      "  warnings.warn(\n",
-      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
-      "  warnings.warn(\n",
       "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
       "  warnings.warn(\n",
       "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
@@ -118,25 +110,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'compare_acquisition_functions' from 'confidence_intervals' (/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/confidence_intervals.py)",
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'ucb_2' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/aquistion_funs_experiments.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/aquistion_funs_experiments.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mconfidence_intervals\u001b[39;00m \u001b[39mimport\u001b[39;00m compare_acquisition_functions\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/aquistion_funs_experiments.ipynb#W3sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m compare_acquisition_functions(ucb_2, ucb_ci_2, ei_2, ei_ci_2, pi_2, pi_ci_2)\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'compare_acquisition_functions' from 'confidence_intervals' (/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/confidence_intervals.py)"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/aquistion_funs_experiments.ipynb Cell 2\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/aquistion_funs_experiments.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mconfidence_intervals\u001b[39;00m \u001b[39mimport\u001b[39;00m compare_acquisition_functions\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/aquistion_funs_experiments.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m compare_acquisition_functions(ucb_2, ucb_ci_2, ei_2, ei_ci_2, pi_2, pi_ci_2)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ucb_2' is not defined"
      ]
     }
    ],
    "source": [
     "from confidence_intervals import compare_acquisition_functions\n",
     "\n",
-    "compare_acquisition_functions(ucb_2, ucb_ci_2, ei_2, ei_ci_2, pi_2, pi_ci_2)"
+    "compare_acquisition_functions(ucb_2, ucb_ci_2, ei_2, ei_ci_2, pi_2, pi_ci_2, filename='Ackley, dim=2')"
    ]
   },
   {
@@ -159,26 +159,34 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.plot(ucb_2, label='qUCB')\n",
-    "plt.fill_between(np.arange(len(ucb_2)), ucb_2 - ucb_ci_2, ucb_2 + ucb_ci_2, alpha=0.2, label='95% CI (qUCB)')\n",
+    "def plot_acquisition_functions(ucb_2, ucb_ci_2, ei_2, ei_ci_2, pi_2, pi_ci_2):\n",
+    "    plt.figure(figsize=(10, 6))\n",
     "\n",
-    "# Dimension 3\n",
-    "plt.plot(ei_2, label='qEI')\n",
-    "plt.fill_between(np.arange(len(ei_2)), ei_2 - ei_ci_2, ei_2 + ei_ci_2, alpha=0.2, label='95% CI (qEI)')\n",
+    "    # Plot qUCB\n",
+    "    plt.plot(ucb_2, label='qUCB')\n",
+    "    plt.fill_between(np.arange(len(ucb_2)), ucb_2 - ucb_ci_2, ucb_2 + ucb_ci_2, alpha=0.2, label='95% CI (qUCB)')\n",
     "\n",
-    "# Dimension 4\n",
-    "plt.plot(pi_2, label='qPI')\n",
-    "plt.fill_between(np.arange(len(pi_2)), pi_2 - pi_ci_2, pi_2 + pi_ci_2, alpha=0.2, label='95% CI (qPI)')\n",
+    "    # Plot qEI\n",
+    "    plt.plot(ei_2, label='qEI')\n",
+    "    plt.fill_between(np.arange(len(ei_2)), ei_2 - ei_ci_2, ei_2 + ei_ci_2, alpha=0.2, label='95% CI (qEI)')\n",
     "\n",
-    "plt.plot([0, 100], [0, 0], \"k--\", lw=3, label='Optimum')\n",
+    "    # Plot qPI\n",
+    "    plt.plot(pi_2, label='qPI')\n",
+    "    plt.fill_between(np.arange(len(pi_2)), pi_2 - pi_ci_2, pi_2 + pi_ci_2, alpha=0.2, label='95% CI (qPI)')\n",
     "\n",
-    "plt.ylim([-20, 1]) \n",
-    "plt.title('Acquisition functions on 2D Ackley')\n",
-    "plt.xlabel('Iteration')\n",
-    "plt.ylabel('Max y value')\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
-    "plt.show()\n"
+    "    # Plot Optimum\n",
+    "    plt.plot([0, len(ucb_2)], [0, 0], \"k--\", lw=3, label='Optimum')\n",
+    "\n",
+    "    plt.ylim([-20, 1])\n",
+    "    plt.title('Acquisition functions on 2D Ackley')\n",
+    "    plt.xlabel('Iteration')\n",
+    "    plt.ylabel('Max y value')\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    plt.show()\n",
+    "\n",
+    "# Example usage with the given arrays\n",
+    "plot_acquisition_functions(ucb_2, ucb_ci_2, ei_2, ei_ci_2, pi_2, pi_ci_2)\n"
    ]
   }
  ],
