--- a/SO_Numerical_Experiments/aquistion_funs_experiments.ipynb
+++ b/SO_Numerical_Experiments/aquistion_funs_experiments.ipynb
@@ -712,10 +712,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Comparison  Is_Greater  Superior\n",
+      "0   UCB > EI           0         0\n",
+      "1   UCB > PI           1         0\n",
+      "2   EI > UCB           1         0\n",
+      "3    EI > PI           1         1\n",
+      "4   PI > UCB           0         0\n",
+      "5    PI > EI           0         0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from botorch.test_functions import Hartmann\n",
+    "\n",
+    "ucb_2, ucb_ci_2 = ci_bo(dim=6, acqf_type='qUCB', batch_size=5, epochs=15, n_init=25, N_TRIALS=10, function=Hartmann(dim=6,negate=True), lower_bound=0, upper_bound=1,super_seed=10)\n",
+    "ei_2, ei_ci_2 = ci_bo(dim=6, acqf_type='qEI', batch_size=5, epochs=15, n_init=25, N_TRIALS=10, function=Hartmann(dim=6,negate=True), lower_bound=0, upper_bound=1,super_seed=20)\n",
+    "pi_2, pi_ci_2 = ci_bo(dim=6, acqf_type='qPI', batch_size=5, epochs=15, n_init=25, N_TRIALS=10, function=Hartmann(dim=6,negate=True), lower_bound=0, upper_bound=1,super_seed=30)\n",
+    "\n",
+    "compare_acquisition_functions(ucb_2, ucb_ci_2, ei_2, ei_ci_2, pi_2, pi_ci_2, filename='Hartmann, dim=10')"
+   ]
   }
  ],
  "metadata": {
