--- a/SO_Numerical_Experiments/results/low_dim/summary.ipynb
+++ b/SO_Numerical_Experiments/results/low_dim/summary.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'low_dim'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/results/low_dim/summary.ipynb Cell 1\u001b[0m line \u001b[0;36m9\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/results/low_dim/summary.ipynb#W0sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m summary_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(columns\u001b[39m=\u001b[39m[\u001b[39m'\u001b[39m\u001b[39mComparison\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mIs_Greater\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mSuperior\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/results/low_dim/summary.ipynb#W0sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# Iterate through all files in the folder\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/results/low_dim/summary.ipynb#W0sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mfor\u001b[39;00m filename \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39;49mlistdir(folder_path):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/results/low_dim/summary.ipynb#W0sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39mif\u001b[39;00m filename\u001b[39m.\u001b[39mendswith(\u001b[39m'\u001b[39m\u001b[39m.csv\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/results/low_dim/summary.ipynb#W0sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m         file_path \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(folder_path, filename)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'low_dim'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Comparison  Is_Greater  Superior\n",
+      "0   UCB > EI           3         0\n",
+      "1   UCB > PI           3         0\n",
+      "2   EI > UCB           3         0\n",
+      "3    EI > PI           4         0\n",
+      "4   PI > UCB           3         1\n",
+      "5    PI > EI           2         1\n"
      ]
     }
    ],
@@ -21,12 +23,12 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "folder_path = 'low_dim'\n",
+    "folder_path = '/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/results/low_dim'\n",
     "\n",
     "summary_df = pd.DataFrame(columns=['Comparison', 'Is_Greater', 'Superior'])\n",
     "\n",
     "for filename in os.listdir(folder_path):\n",
-    "    if filename.endswith('.csv'):\n",
+    "    if filename.endswith('dim=2'):\n",
     "        file_path = os.path.join(folder_path, filename)\n",
     "        df = pd.read_csv(file_path)\n",
     "        if summary_df.empty:\n",
