--- a/SO_Numerical_Experiments/results/high_dim/summary.ipynb
+++ b/SO_Numerical_Experiments/results/high_dim/summary.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Comparison  Is_Greater  Superior\n",
-      "0   UCB > EI           1         1\n",
-      "1   UCB > PI           3         1\n",
-      "2   EI > UCB           3         0\n",
-      "3    EI > PI           4         1\n",
-      "4   PI > UCB           1         0\n",
-      "5    PI > EI           0         0\n"
+      "  Comparison  Count  Superior\n",
+      "0   UCB > EI      1         1\n",
+      "1   UCB > PI      3         1\n",
+      "2   EI > UCB      3         0\n",
+      "3    EI > PI      4         1\n",
+      "4   PI > UCB      1         0\n",
+      "5    PI > EI      0         0\n"
      ]
     }
    ],
@@ -36,7 +36,8 @@
     "        else:\n",
     "            summary_df['Is_Greater'] += df['Is_Greater']\n",
     "            summary_df['Superior'] += df['Superior']\n",
-    "\n",
+    "            \n",
+    "summary_df.rename(columns={'Is_Greater': 'Count'}, inplace=True)\n",
     "\n",
     "print(summary_df)"
    ]
