--- a/SO_Numerical_Experiments/results/high_dim/summary.ipynb
+++ b/SO_Numerical_Experiments/results/high_dim/summary.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Comparison  Count  Superior\n",
-      "0   UCB > EI      1         1\n",
-      "1   UCB > PI      4         1\n",
-      "2   EI > UCB      4         0\n",
-      "3    EI > PI      5         2\n",
-      "4   PI > UCB      1         0\n",
-      "5    PI > EI      0         0\n"
+      "  Comparison  Is_Greater  Superior\n",
+      "0   UCB > EI           3         0\n",
+      "1   UCB > PI           3         0\n",
+      "2   EI > UCB           3         0\n",
+      "3    EI > PI           4         0\n",
+      "4   PI > UCB           3         1\n",
+      "5    PI > EI           2         1\n"
      ]
     }
    ],
@@ -23,12 +23,12 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "folder_path = '/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/results/high_dim'\n",
+    "folder_path = '/Users/dylanschubert/Documents/GitHub/msc_code/SO_Numerical_Experiments/results/low_dim'\n",
     "\n",
     "summary_df = pd.DataFrame(columns=['Comparison', 'Is_Greater', 'Superior'])\n",
     "\n",
     "for filename in os.listdir(folder_path):\n",
-    "    if filename.endswith('dim=10'):\n",
+    "    if filename.endswith('dim=2'):\n",
     "        file_path = os.path.join(folder_path, filename)\n",
     "        df = pd.read_csv(file_path)\n",
     "        if summary_df.empty:\n",
@@ -36,8 +36,7 @@
     "        else:\n",
     "            summary_df['Is_Greater'] += df['Is_Greater']\n",
     "            summary_df['Superior'] += df['Superior']\n",
-    "            \n",
-    "summary_df.rename(columns={'Is_Greater': 'Count'}, inplace=True)\n",
+    "\n",
     "\n",
     "print(summary_df)"
    ]
