--- a/SO_Numerical_Experiments/results/high_dim/summary.ipynb
+++ b/SO_Numerical_Experiments/results/high_dim/summary.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Comparison  Count  Superior\n",
-      "0   UCB > EI      1         1\n",
-      "1   UCB > PI      4         1\n",
-      "2   EI > UCB      4         0\n",
-      "3    EI > PI      5         2\n",
-      "4   PI > UCB      1         0\n",
-      "5    PI > EI      0         0\n"
+      "  Comparison  Better Count  Superior Count\n",
+      "0   UCB > EI             2               1\n",
+      "1   UCB > PI             5               2\n",
+      "2   EI > UCB             4               0\n",
+      "3    EI > PI             6               2\n",
+      "4   PI > UCB             1               0\n",
+      "5    PI > EI             0               0\n"
      ]
     }
    ],
@@ -37,7 +37,8 @@
     "            summary_df['Is_Greater'] += df['Is_Greater']\n",
     "            summary_df['Superior'] += df['Superior']\n",
     "\n",
-    "summary_df.rename(columns={'Is_Greater': 'Count'}, inplace=True)\n",
+    "summary_df.rename(columns={'Is_Greater': 'Better Count'}, inplace=True)\n",
+    "summary_df.rename(columns={'Superior': 'Superior Count'}, inplace=True)\n",
     "print(summary_df)"
    ]
   }
