--- a/SO_Numerical_Experiments/aquistion_funs_experiments.ipynb
+++ b/SO_Numerical_Experiments/aquistion_funs_experiments.ipynb
@@ -1004,7 +1004,18 @@
    "cell_type": "code",
    "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n",
+      "/Users/dylanschubert/anaconda3/envs/msc_project/lib/python3.12/site-packages/botorch/optim/initializers.py:432: BadInitialCandidatesWarning: Unable to find non-zero acquisition function values - initial conditions are being selected randomly.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from botorch.test_functions import Rastrigin\n",
     "\n",
@@ -1050,12 +1061,27 @@
     "plt.plot([0, len(ucb_2)], [0, 0], \"k--\", lw=3, label='Optimum')\n",
     "\n",
     "plt.ylim([-200, 0])\n",
-    "plt.title('Acquisition functions on Rastrigin 2D')\n",
+    "plt.title('Acquisition functions on Rastrigin 10D')\n",
     "plt.xlabel('Iteration')\n",
     "plt.ylabel('Max y value')\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from botorch.test_functions import Rosenbrock\n",
+    "# for 2 and 10\n",
+    "ucb_2, ucb_ci_2 = ci_bo(dim=10, acqf_type='qUCB', batch_size=5, epochs=15, n_init=25, N_TRIALS=10, function=Rosenbrock(dim=10,negate=True), lower_bound=-5, upper_bound=10,super_seed=10)\n",
+    "ei_2, ei_ci_2 = ci_bo(dim=10, acqf_type='qEI', batch_size=5, epochs=15, n_init=25, N_TRIALS=10, function=Rosenbrock(dim=10,negate=True), lower_bound=-5, upper_bound=10,super_seed=20)\n",
+    "pi_2, pi_ci_2 = ci_bo(dim=10, acqf_type='qPI', batch_size=5, epochs=15, n_init=25, N_TRIALS=10, function=Rosenbrock(dim=10,negate=True), lower_bound=-5, upper_bound=10,super_seed=30)\n",
+    "\n",
+    "compare_acquisition_functions(ucb_2, ucb_ci_2, ei_2, ei_ci_2, pi_2, pi_ci_2, filename='Rosenbrock, dim=10')"
    ]
   }
  ],
